@@ -29,7 +29,7 @@
 			<tr>
 				<th>Days</th>
 				<th>08:30</th>
-				<th>09:30</th>				
+				<th>09:30</th>
 				<th>10:30</th>
 				<th>11:30</th>
 				<th>12:30</th>
