@@ -5,7 +5,7 @@ Format of timeslots.xml
 	<timeslot start="">
 		<booking>
 			<day weekday=""></day>
-			<courseCode></courseCode>
+			<courseCode>ACIT </courseCode>
 			<courseType></courseType>
 			<room></room>
 			<instructor></instructor>
@@ -15,9 +15,10 @@ Format of timeslots.xml
 -->
 
 <?xml-stylesheet type="text/xsl" href="timeslots.xsl"?>
+
 <timetable>
 	<timeslots>
-		<timeslot start="08:30">
+		<timeslot start="08:30" end="10:20">
 			<booking>
 				<day weekday="Tuesday"></day>
 				<courseCode>ACIT 4620</courseCode>
@@ -33,14 +34,7 @@ Format of timeslots.xml
 				<instructor>Steve Fabiszewski</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="09:30">
-			<booking>
-				<day weekday="Tuesday"></day>
-				<courseCode>ACIT 4620</courseCode>
-				<courseType>Lab</courseType>
-				<room>SE12-306</room>
-				<instructor>Bethany Edmunds</instructor>
-			</booking>
+		<timeslot start="09:30" end="10:20">
 			<booking>
 				<day weekday="Thursday"></day>
 				<courseCode>ACIT 4910</courseCode>
@@ -48,15 +42,8 @@ Format of timeslots.xml
 				<room>SW1-1205</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
-			<booking>
-				<day weekday="Friday"></day>
-				<courseCode>ACIT 4660</courseCode>
-				<courseType>Lec</courseType>
-				<room>SW9-206</room>
-				<instructor>Steve Fabiszewski</instructor>
-			</booking>
 		</timeslot>
-		<timeslot start="10:30">
+		<timeslot start="10:30" end="12:20">
 			<booking>
 				<day weekday="Monday"></day>
 				<courseCode>ACIT 4650</courseCode>
@@ -65,10 +52,10 @@ Format of timeslots.xml
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
 			<booking>
-				<day weekday="Thursday"></day>
+				<day weekday="Tuesday"></day>
 				<courseCode>ACIT 4910</courseCode>
-				<courseType>Lec</courseType>
-				<room>SW1-2005</room>
+				<courseType>Lab</courseType>
+				<room>SE12-306</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
 			<booking>
@@ -79,30 +66,7 @@ Format of timeslots.xml
 				<instructor>Trevor Lord</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="11:30">
-			<booking>
-				<day weekday="Monday"></day>
-				<courseCode>ACIT 4650</courseCode>
-				<courseType>Lab</courseType>
-				<room>SE12-306</room>
-				<instructor>Medhat Elmasry</instructor>
-			</booking>
-			<booking>
-				<day weekday="Thursday"></day>
-				<courseCode>ACIT 4910</courseCode>
-				<courseType>Lec</courseType>
-				<room>SW1-2005</room>
-				<instructor>Richard Chau</instructor>
-			</booking>
-			<booking>
-				<day weekday="Friday"></day>
-				<courseCode>ACIT 4770</courseCode>
-				<courseType>Lab</courseType>
-				<room>SE12-306</room>
-				<instructor>Trevor Lord</instructor>
-			</booking>
-		</timeslot>
-		<timeslot start="12:30">
+		<timeslot start="12:30" end="13:20">
 			<booking>
 				<day weekday="Tuesday"></day>
 				<courseCode>ACIT 4650</courseCode>
@@ -110,6 +74,8 @@ Format of timeslots.xml
 				<room>SE6-205</room>
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
+		</timeslot>
+		<timeslot start="12:30" end="14:20">
 			<booking>
 				<day weekday="Wednesday"></day>
 				<courseCode>ACIT 4850</courseCode>
@@ -118,14 +84,7 @@ Format of timeslots.xml
 				<instructor>James Parry</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="13:30">
-			<booking>
-				<day weekday="Wednesday"></day>
-				<courseCode>ACIT 4850</courseCode>
-				<courseType>Lec</courseType>
-				<room>SE6-207</room>
-				<instructor>James Parry</instructor>
-			</booking>
+		<timeslot start="13:30" end="15:20">
 			<booking>
 				<day weekday="Thursday"></day>
 				<courseCode>ACIT 4850</courseCode>
@@ -141,23 +100,7 @@ Format of timeslots.xml
 				<instructor>Steve Fabiszewski</instructor>
 			</booking>
 		</timeslot>
-		<timeslot start="14:30">
-			<booking>
-				<day weekday="Thursday"></day>
-				<courseCode>ACIT 4850</courseCode>
-				<courseType>Lab</courseType>
-				<room>SE12-308</room>
-				<instructor>James Parry</instructor>
-			</booking>
-			<booking>
-				<day weekday="Friday"></day>
-				<courseCode>ACIT 4660</courseCode>
-				<courseType>Lab</courseType>
-				<room>SE12-206</room>
-				<instructor>Steve Fabiszewski</instructor>
-			</booking>
-		</timeslot>
-		<timeslot start="15:30">
+		<timeslot start="15:30" end="16:20">
 			<booking>
 				<day weekday="Monday"></day>
 				<courseCode>ACIT 4910</courseCode>
@@ -165,15 +108,8 @@ Format of timeslots.xml
 				<room>SW1-2005</room>
 				<instructor>Richard Chau</instructor>
 			</booking>
-			<booking>
-				<day weekday="Tuesday"></day>
-				<courseCode>ACIT 4620</courseCode>
-				<courseType>Lec</courseType>
-				<room>SW1-2020</room>
-				<instructor>Bethany Edmunds</instructor>
-			</booking>
 		</timeslot>
-		<timeslot start="16:30">
+		<timeslot start="16:30" end="17:20">
 			<booking>
 				<day weekday="Monday"></day>
 				<courseCode>ACIT 4650</courseCode>
@@ -181,6 +117,8 @@ Format of timeslots.xml
 				<room>SE6-205</room>
 				<instructor>Medhat Elmasry</instructor>
 			</booking>
+		</timeslot>
+		<timeslot start="15:30" end="17:20">
 			<booking>
 				<day weekday="Tuesday"></day>
 				<courseCode>ACIT 4620</courseCode>
