@@ -2,6 +2,7 @@ Newest at the top
 YYYY-MM-DD HR:MIN - comment
 
 Lab 10 - Changelog
+2016-04-05 14:15 - Remove double booking in timeslots.xml and removed excess tabs in days.xsl
 2016-04-05 13:11 - Finished days.xsl
 2016-04-05 11:58 - Added ACIT before the code number in the courseCode value for both days and timeslots.xml
 2016-04-05 11:25 - Local validation passed for timeslots.xml and .xsl. No errors :)
